Dropdown content for default search engine is not attached
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox67 | --- | unaffected |
firefox68 | --- | fixed |
firefox69 | --- | fixed |
People
(Reporter: yoasif, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(2 files)
153.20 KB,
image/png
|
Details | |
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
Steps to reproduce:
- Visit about:preferences#search
- Click the default search engine dropdown
What happens:
The menu appears away from the dropdown
Expected result:
The menu should appear attached to the dropdown
Reporter | ||
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Reporter | ||
Comment 2•2 years ago
|
||
I'm actually unsure if it is Wayland specific; this is the regression range:
15:34.26 INFO: Narrowed inbound regression window from [b558ba47, b067a5b1] (3 builds) to [b558ba47, 93d4fceb] (2 builds) (~1 steps left)
15:34.26 INFO: No more inbound revisions, bisection finished.
15:34.26 INFO: Last good revision: b558ba472e668f18999200d08d07a0f2c2475cdb
15:34.26 INFO: First bad revision: 93d4fcebc9d7a0d2ade280e634f2864ce8004335
15:34.26 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b558ba472e668f18999200d08d07a0f2c2475cdb&tochange=93d4fcebc9d7a0d2ade280e634f2864ce8004335
I'll try removing export MOZ_ENABLE_WAYLAND=1 from my profile and report back.
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 4•2 years ago
|
||
Assignee | ||
Updated•2 years ago
|
Pushed by ccoroiu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/aa776e6ed29a
[Wayland] Don't position windows with zero height/width, r=jhorak
Comment 6•2 years ago
|
||
bugherder |
Assignee | ||
Comment 7•2 years ago
|
||
Comment on attachment 9069345 [details]
Bug 1555866 - [Wayland] Don't position windows with zero height/width, r=jhorak
Beta/Release Uplift Approval Request
- User impact if declined: Wrong popup position on Wayland (extend Bug 1550051 to some corner case when popup is not initialized yet).
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Minor fix, Wayland/Linux only.
- String changes made/needed:
Comment 8•2 years ago
|
||
Comment on attachment 9069345 [details]
Bug 1555866 - [Wayland] Don't position windows with zero height/width, r=jhorak
wayland fix for 68.0b8
Comment 9•2 years ago
|
||
bugherderuplift |
Updated•2 years ago
|
Description
•