Bug 1555866 - [Wayland] Don't position windows with zero height/width, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D33492